[project]
name = "caloriscanbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "aiogram>=3.19.0",
    "aiosqlite>=0.21.0",
    "dotenv>=0.9.9",
    "greenlet>=3.1.1",
    "ruff>=0.11.2",
    "sqlalchemy>=2.0.39",
]

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
    "N",  # pep8-naming
]